--- a/runtime/objc/templates/class.dust
+++ b/runtime/objc/templates/class.dust
@@ -22,7 +22,7 @@
 @implementation {typePrefix}{packedName}
 
 {^inherits}
-- (instancetype _Nullable)initFromJavascript:(JSValue*)value {
+- (instancetype _Nullable)initFromJavascript:(JSValue* _Nonnull)value {
   if ((self = [super init])) {
     self.impl = value;
   }
